
ChangeLog for jsrsasign

* Changes from 7.1.3 to 7.1.4 (2017-May-06)
  - all source codes are moved to src directory
  - x509 1.1.12 to 1.1.13
    - refactoring codes
    - X509v1 certificate support in all methods
    - new methods and properties for X509 class
      - readCertHex
      - getVersion
      - getPublicKey
      - getPublicKeyHex
      - getPublicKeyIdx
      - version property
      - foffset property
    - make following methods and properties deprecated in X509 class
      - readCertPEMWithoutRSAInit
      - getSubjectPublicKeyPosFromCertHex
      - getSubjectPublicKeyInfoPosFromCertHex
      - getPublicKeyInfoPosOfCertHEX
      - getSerialNumberHex static method
      - subjectPublicKeyRSA property
      - subjectPublicKeyRSA_hN property
      - subjectPublicKeyRSA_hE property
  - asn1hex 1.1.9 to 1.1.10
    - refactoring codes
    - new methods
      - getIdxbyList
      - getTLVbyList
    - make following methods deprecated
      - getDecendantIndexByNthList (> getIdxbyList)
  - asn1x509 1.0.22 to 1.0.23
    - serialNumber(2.5.4.5) parameter added OID attribute type
  - base64x 1.1.9 to 1.1.10
    - hextoposhex function added

* Changes from 7.1.2 to 7.1.3 (2017-Apr-15)
  - jsrsasign-latest-all-min.js was moved to
    jsrsasign-all-min.js in master. 
    In gh-page, both are provided for backword
    compatibity. 
  - base64x 1.1.8 to 1.1.9
    - zuluto{date,msec,int} are added
  - jws 3.3.5 to 3.3.6
    - modified IntDate.getZulu to use zulutosec;

* Changes from 7.1.1 to 7.1.2 (2017-Mar-20)
  - CRITICAL BUG FIX: KJUR.asn1.x509.AlgorithmIdentifier
    default was wrong in algorithm parameter field.
    For example "SHA1" AlgorithmIdentifier object
    will be missing algorithm parameter field by
    bug. This issue raised just only in 7.1.1 and
    the issue was fixed.
    - asn1x509 1.0.21 to 1.0.22
      - AlgorithmIdentifier bug fix

* Changes from 7.1.0 to 7.1.1 (2017-Mar-10)
  - CRITICAL BUG FIX: KJUR.asn1.x509.Certificate.sign() and