@@ -1,6 +1,13 @@
 
 ChangeLog for jsrsasign
 
+* Changes from 7.1.4 to x.x.x (2017-May-xx)
+  - sample/sample*.html tool/tool*.html test/qunit*.html link fixed
+  - ext/rng.js
+    - msCrypto fallback for IE11 to prevent error 
+      when calling window.crypto. (pull/254)
+      Thanks @mike-w-kelly.
+
 * Changes from 7.1.3 to 7.1.4 (2017-May-06)
   - all source codes are moved to src directory
   - x509 1.1.12 to 1.1.13
